@@ -9,6 +9,7 @@ Version 0.1.3 (unreleased)
 * Replaced XML Schema by strict parser.
 * Undo/redo rewritten to use states instead of functions.
 * Fixed bug in search when an intersecting word is filled in.
+* Added ability to show only unused words.
 
 Version 0.1.2 (April 2, 2010)
 =============================
